# RepTrace

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
configs/: OpenRouter_llm_list.txt  llm_list.txt
scripts/: calc_dna.py  calc_dna.sh
src/llm_dna/: __init__.py  cli.py
src/llm_dna/core/: __init__.py
src/llm_dna/data/: ProbeGenerator.py  __init__.py
src/llm_dna/dna/: DNAExtractor.py  DNASignature.py
src/llm_dna/models/: ModelWrapper.py  __init__.py
src/llm_dna/utils/: DataUtils.py  __init__.py
src/reptrace/: __init__.py  api.py  cli.py
src/reptrace/core/: __init__.py  extraction.py
src/reptrace/data/: DatasetLoader.py  generate_rand_dataset.py
src/reptrace/dna/: DNASignature.py  EmbeddingDNAExtractor.py  __init__.py
src/reptrace/experiments/: __init__.py  compute_dna.py  dryrun.py
src/reptrace/models/: ModelLoader.py  ModelWrapper.py  get_model_metadata.py
src/reptrace/utils/: DataUtils.py  check_chat_model.py  metadata.py
tests/: conftest.py  test_calc_dna_script.py  test_cli_defaults.py  test_multi_model_execution.py  test_parallel_llm_list_api.py  test_public_api.py  test_rand_dataset.py  test_real_api_access.py  test_real_extraction.py  test_remote_batch_providers.py  test_signature_metrics.py
